// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: Component should render correctly 1`] = `
<button
  style={
    Object {
      "backgroundColor": "#f0efef",
      "border": "none",
      "borderRadius": "48px",
      "color": "#1d1d20",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "18px",
      "margin": "0",
      "minHeight": "48px",
      "outline": "none",
      "padding": "0",
    }
  }
>
  button
</button>
`;

exports[`Button: Component should render with custom styles 1`] = `
<button
  style={
    Object {
      "backgroundColor": "red",
      "border": "none",
      "borderRadius": "48px",
      "color": "#1d1d20",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "18px",
      "margin": "0",
      "minHeight": "48px",
      "outline": "none",
      "padding": "0",
    }
  }
>
  button
</button>
`;
